--- a/node.js/buildind_a_web_app/src/views/index.ejs
+++ b/node.js/buildind_a_web_app/src/views/index.ejs
@@ -21,18 +21,11 @@
               </div>
               <nav class="collapse navbar-collapse" role="navigation">
                 <ul class="nav navbar-nav">
+                <%for(let i=0; i<nav.length; i++) {%>
                   <li>
-                    <a href="#">Category</a>
+                    <a href="#"><%=nav[i]%></a>
                   </li>
-                  <li>
-                    <a href="#">Category</a>
-                  </li>
-                  <li>
-                    <a href="#">Category</a>
-                  </li>
-                  <li>
-                    <a href="#">Category</a>
-                  </li>
+                <%}%>
                 </ul>
                 <ul class="nav navbar-right navbar-nav">
                   <li class="dropdown">
